--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ a {
         <ul class="list-content ">
         	<li>+34 123 456 789</li> <!-- YOUR PHONE NUMBER  -->
         	<li>j.anderson@gmail.com</li> <!-- YOUR EMAIL -->
-        	<li><a href="#">janderson.com</a></li> <!-- YOUR WEBSITE  -->
+        	<li><a href="#">jhttps://duskdesk.github.io/mycv/./a></li> <!-- YOUR WEBSITE  -->
         	<li>Los Angeles, CA</li> <!-- YOUR STATE AND COUNTRY  -->
         </ul>
       </div>
