--- a/index.html
+++ b/index.html
@@ -447,10 +447,10 @@ a {
       		<li>Home</li>
       	</ul>
         <ul class="list-content ">
-        	<li>+34 123 456 789</li> <!-- YOUR PHONE NUMBER  -->
-        	<li>j.anderson@gmail.com</li> <!-- YOUR EMAIL -->
+        	<li>+0338013010</li> <!-- YOUR PHONE NUMBER  -->
+        	<li>duskdesk@gmail.coma</li> <!-- YOUR EMAIL -->
         	<li><a href="#">jhttps://duskdesk.github.io/mycv/./a></li> <!-- YOUR WEBSITE  -->
-        	<li>Los Angeles, CA</li> <!-- YOUR STATE AND COUNTRY  -->
+        	<li>Bình Tân, HCM</li> <!-- YOUR STATE AND COUNTRY  -->
         </ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
@@ -463,9 +463,9 @@ a {
       		<li>Codepen</li>
       	</ul>
         <ul class="list-content"> <!-- REMEMBER TO PUT THE URL ON THE HREF TAG  -->
-      		<li><a href="">@janderson</a></li> <!-- YOUR TWITTER USER  -->
-      		<li><a href="">janderson</a></li> <!-- YOUR DRIBBBLE USER  -->
-      		<li><a href="">janderson</a></li> <!-- YOUR BEHANCE USER  -->
+      		<li><a href="">@duskdesk</a></li> <!-- YOUR TWITTER USER  -->
+      		<li><a href="">duskdesk</a></li> <!-- YOUR DRIBBBLE USER  -->
+      		<li><a href="">duskdesk</a></li> <!-- YOUR BEHANCE USER  -->
       	</ul>
       </div>
 		</div>
