--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ a {
 }
 
 .profile {
-  background: #ff99ff;
+  background: #555555;
   width: 40%;
   float: left;
   color: #9099a0;
@@ -214,7 +214,7 @@ a {
   }
 }
 .experience h3.experience-title {
-  color: #66cc99;
+  color: #cc0000;
   text-align: left;
   text-transform: uppercase;
   font-size: 1.2em;
