--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ a {
         </ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
-      	<p><span class="bold">DuskDesk</span> Thời gian là những thứ vô cùng hạn hẹp nên cần sự trân trọng </p>
+      	<p><span class="bold">DuskDesk</span> Thời gian là những thứ vô cùng hạn hẹp nên cần sự trân trọng... </p>
       </div>
       <div class="contact-social clearfix">
       	<ul class="list-titles">
